--- a/style.css
+++ b/style.css
@@ -1,2 +1,5 @@
 h1{color: blue; font-size: 50px;}
 h2{color: cornflowerblue; font-size: 40px;}
+
+ .support{color:darkgreen;}
+ .submit{background-color: crimson; color: cornsilk;}
