--- a/style.css
+++ b/style.css
@@ -3,3 +3,4 @@ h2{color: cornflowerblue; font-size: 40px;}
 
  .support{color:darkgreen;}
  .submit{background-color: crimson; color: cornsilk;}
+ a{color: chartreuse;}
