--- a/style.css
+++ b/style.css
@@ -3,4 +3,6 @@ h2{color: cornflowerblue; font-size: 40px;}
 
  .support{color:darkgreen;}
  .submit{background-color: crimson; color: cornsilk;}
- a{color: chartreuse;}
+ a{color: deeppink;}
+ p{color: blueviolet;}
+ .ways{color: chartreuse; text-align: center; text-decoration: underline;}
