--- a/style.css
+++ b/style.css
@@ -6,3 +6,7 @@ h2{color: cornflowerblue; font-size: 40px;}
  a{color: deeppink;}
  p{color: blueviolet;}
  .ways{color: chartreuse; text-align: center; text-decoration: underline;}
+ #h2{color: mediumvioletred; text-align: center; text-decoration: underline;}
+ #tab{text-align:center ;}
+ td{color: darkmagenta;}
+ th{color: deepskyblue;}
