--- a/style.css
+++ b/style.css
@@ -1,12 +1,13 @@
-h1{color: blue; font-size: 50px;}
-h2{color: cornflowerblue; font-size: 40px;}
+h1{color: blue; font-size: 50px; text-decoration: underline;}
+h2{color: cornflowerblue; font-size: 40px; text-decoration: underline;}
 
  .support{color:darkgreen;}
  .submit{background-color: crimson; color: cornsilk;}
  a{color: deeppink;}
- p{color: blueviolet;}
+ 
  .ways{color: chartreuse; text-align: center; text-decoration: underline;}
  #h2{color: mediumvioletred; text-align: center; text-decoration: underline;}
  #tab{text-align:center ;}
  td{color: darkmagenta;}
  th{color: deepskyblue;}
+ strong{color: fuchsia;}
