--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ h2{color: cornflowerblue; font-size: 40px; text-decoration: underline;}
  
  .ways{color: chartreuse; text-align: center; text-decoration: underline;}
  #h2{color: mediumvioletred; text-align: center; text-decoration: underline;}
- #tab{text-align:center ;}
+ #tab{text-align:center ; background-color: wheat; border-color: orangered;}
  td{color: darkmagenta;}
- th{color: deepskyblue;}
+ th{color: rgb(255, 81, 0);}
  strong{color: fuchsia;}
