--- a/style.css
+++ b/style.css
@@ -11,3 +11,4 @@ h2{color: cornflowerblue; font-size: 40px; text-decoration: underline;}
  td{color: darkmagenta;}
  th{color: rgb(255, 81, 0);}
  strong{color: fuchsia;}
+ #body{background-color: rgba(147, 148, 73, 0.171);}
